# Minesweeper-Haskell

./: .gitignore  ASSIGNMENT_BRIEF.md  LICENSE  README.md  minesweeper.cabal  stack.yaml
src/: Agent.hs  Board.hs  Cell.hs  Main.hs
