name:                minesweeper
version:             0.1.0.0
synopsis:            Minesweeper implementation
description:         Minesweeper implementation
homepage:            https://github.com/Chuset21/Minesweeper-Haskell#README.md
license:             MIT
license-file:        LICENSE
author:              Miguel Arrieta
copyright:           2023 Miguel Arrieta
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minesweeper
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Board, Agent
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , threepenny-gui
                     , vector
                     , random
                     , MonadRandom